--- a/arch/arm64/configs/aoscp_oneplus3_defconfig
+++ b/arch/arm64/configs/aoscp_oneplus3_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-aoscp.luna-luvgd36"
 # CONFIG_SWAP is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
